--- a/css/background.css
+++ b/css/background.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url("img/login_bg.jpg");
+    background-color: #F4F3F2;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
