--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -1,7 +1,8 @@
  
 //* @override default colors
-$primary : #1F2833;
+$primary : #540655;
 $secondary : #C5C6C7;
+
 
 
 @import "../node_modules/bootstrap/scss/bootstrap"
